@@ -13,6 +13,8 @@ var CloudCommander, $;
     /* setting head ie6 - ie8 */
     var lUtil = CloudCommander.Util;
     
+    lUtil.jqueryLoad();
+    
     /* setting function context (this) */
     lUtil.bind = function(pFunction, pContext){
         return $.proxy(pFunction, pContext);
