@@ -61,6 +61,8 @@ var CloudCommander, CloudFunc, $;
      * @pCallBack   -  executes, when everything loaded
      */
     CloudCommander.Viewer.FancyBox.load         = (function(pThis, pCallBack){
+        Util.jqueryLoad();
+        
         var ljsLoad_f = function(){                                
             var lSrc = pThis.dir + 'jquery.fancybox.js';
             Util.jsload(lSrc,{
