@@ -10,6 +10,10 @@ would be doing on-a-fly
 
 * Added ability to use ajax without jquery.
 
+* From now jquery not necessary for Cloud Commander
+work, (so start load get faster), but it could be
+loaded any time by any extension.
+
 
 2012.08.24, Version 0.1.6
  
